@@ -1,3 +1,11 @@
+Wed Dec 23 20:14:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/ami4ccm/examples/Hello/Base/Hello.idl
+        * connectors/ami4ccm/examples/Hello/Receiver/Hello_Receiver_exec.cpp
+        * connectors/ami4ccm/examples/Hello/Receiver/Hello_Receiver_exec.h
+        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender_exec.cpp
+          Extended this example with more exceptions
+
 Wed Dec 23 15:20:54 UTC 2009  Marcel Smit  <msmit@remedy.nl>
 
         * DAnCE/Logger/Logger_Service.cpp:
